--- a/src/org/starnub/localization/language.properties
+++ b/src/org/starnub/localization/language.properties
@@ -35,7 +35,7 @@ sn.cc.3=Configuration does not exist.
 ssm=Starting the Starbound Server.
 ssmc=It appears the Starbound server crashed.
 ssmc1=Your server has crashed
-sscm2=time(s) since the last auto restart.
+ssmc2=time(s) since the last auto restart.
 ssmu=It appears the Starbound server is unresponsive, Starting the Starbound server...
 ssmu1=Your server been unresponsive
 ssmu2=time(s) since the last auto restart.
