--- a/src/org/starnub/localization/language_english.properties
+++ b/src/org/starnub/localization/language_english.properties
@@ -13,6 +13,8 @@ kl2=Starting key running.
 dc=Checking for StarNub directories...
 dcc=Directory check complete.
 dvc=Validating the StarNub configuration...
+sbcc1=Configuring starbound.config...
+sbcc2=Starbound.config configured.
 uvf=Using variables found in the StarNub.config
 
 
