Major changes - Removed UDP Query. Will implment TCP check instead once packets are complete. - Updated Server Monitor, Broken into methods more to changes for soon.

--- a/src/org/starnub/localization/language_english.properties
+++ b/src/org/starnub/localization/language_english.properties
@@ -2,21 +2,14 @@
 #####  Regular Strings  #####
 ### StarNub Class ###
 ss=Starting StarNub...
-l1=Starting logger...
-l2=Logger running.
-sm1=Starting server monitor...
-sm2=Server monitor running.
-kl1=Starting key listener...
-kl2=Starting key running.
+l=Logger running..
+sm=Server monitor running.
+kl=Starting key listener running.
 
 ### SN_Configuration Class
-dc=Checking for StarNub directories...
-dcc=Directory check complete.
-dvc=Validating the StarNub configuration...
-sbcc1=Configuring starbound.config...
-sbcc2=Starbound.config configured.
+dc=Directory check complete. Validating the StarNub configuration.
 uvf=Using variables found in the StarNub.config
-
+sbcc=Starbound.config configured.
 
 ### SN_ConfigConfigurator Class ###
 cc=Creating StarNub Configuration...
@@ -34,10 +27,10 @@ cf=StarNub is now configured.
 sn.cc.3=Configuration does not exist.
 
 ### SB_ServerMonitor Class ###
-ssm=Starting the Starbound Server.
+ssm=Starting the Starbound Server. If you use mod's this may take a moment.
 ssmc=It appears the Starbound server crashed.
 ssmc1=Your server has crashed
-sscm2=time(s) since the last auto restart.
+ssmc2=time(s) since the last auto restart.
 ssmu=It appears the Starbound server is unresponsive, Starting the Starbound server...
 ssmu1=Your server been unresponsive
 ssmu2=time(s) since the last auto restart.
