Open Idle Channels -Still unable to resolve open channels, after disconnects. This must be fixed before production testing. -Almost finished Stats tracking (Server uptime, response time) -Added log rotation

--- a/src/org/starnub/localization/language.properties
+++ b/src/org/starnub/localization/language.properties
@@ -36,6 +36,7 @@ ssmu1=Your server been unresponsive
 ssmu2=time(s) since the last auto restart.
 ssmar1=It has been
 ssmar2=hours since the last restart. Auto restarting server as per configuration.
+sta=The Starbound Server is now online and ready for players to connect on port:
 
 
 ### SB_ProcessStreamInput Class ###
