IP Checking Added

--- a/src/org/starnub/localization/language_english.properties
+++ b/src/org/starnub/localization/language_english.properties
@@ -1,17 +1,16 @@
 #####  StarNub Language File - English  #####
-#####  Regular Strings  #####
-### StarNub Class ###
+### StarNub ###
 ss=Starting StarNub...
 l=Logger running..
 sm=Server monitor running.
 kl=Starting key listener running.
 
-### SN_Configuration Class
+### Configuration ###
 dc=Directory check complete. Validating the StarNub configuration.
 uvf=Using variables found in the StarNub.config
 sbcc=Starbound.config configured.
 
-### SN_ConfigConfigurator Class ###
+### ConfigConfigurator ###
 cc=Creating StarNub Configuration...
 cc1=This prompt will only come up if your configuration is missing.
 cc2=Type in the value or hit 'Enter' to accept the default value.
@@ -26,7 +25,7 @@ cqc5=Are these correct? (Y/N)(Default Y)
 cf=StarNub is now configured.
 sn.cc.3=Configuration does not exist.
 
-### SB_ServerMonitor Class ###
+### ServerMonitor###
 ssm=Starting the Starbound Server. If you use mod's this may take a moment.
 ssmc=It appears the Starbound server crashed.
 ssmc1=Your server has crashed
@@ -39,14 +38,17 @@ ssmar2=hours since the last restart. Auto restarting server as per configuration
 sta=The Starbound Server is now online and ready for players to connect on port:
 
 
-### SB_ProcessStreamInput Class ###
+### ProcessStreamInput ###
 spsi=Starbound server online. Players may now connect to port
 spsic=connected
 spsid=disconnected
 sb.psi.1=StreamInput Error with inserting or removing from array
 
-### SB_Query Class ###
+### Query ###
 sb.q.1=No response from the Starbound server. Packet
 
-### SN_Directories Class ###
+### Directories ###
 sndc=directory created.
+
+### Network ###
+
