Changed how the server Query works, Added an additional class

--- a/src/org/starnub/localization/language.properties
+++ b/src/org/starnub/localization/language.properties
@@ -46,6 +46,7 @@ sb.psi.1=StreamInput Error with inserting or removing from array
 
 ### Query ###
 sb.q.1=No response from the Starbound server. Packet
+sb.q.2=Attempting to see if the Starbound server has completely started up.
 
 ### Directories ###
 sndc=directory created.
