--- a/src/org/starnub/localization/language_english.properties
+++ b/src/org/starnub/localization/language_english.properties
@@ -46,9 +46,10 @@ sb.psi.1=StreamInput Error with inserting or removing from array
 
 ### Query ###
 sb.q.1=No response from the Starbound server. Packet
+sb.q.2=Attempting to see if the Starbound server has completely started up.
 
 ### Directories ###
 sndc=directory created.
 
 ### Network ###
-
+banned=A player that has been previously banned tried connecting with
